# hs-playground

exec/: hs-exec.cabal  stack.yaml
exec/src/: Exec.hs
