name:                hs-exec
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
category:            Network
build-type:          Simple
cabal-version:       >=1.20

executable hs-exec
  main-is:              Exec.hs
  build-depends:        base >= 4.8 && < 5
                      , turtle
                      , async

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -threaded -Wall -fno-warn-orphans
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        OverloadedStrings
                        RecordWildCards
